--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
-    ]
+        "lib/**/*.jar",
+        "c:\\Users\\xyveeeee\\Desktop\\mysql-connector-j-9.2.0.jar"
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
